--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,22 @@ add_executable(jsxbin_decompiler
         jsxbin/nodes/AssignmentExpr.h
         jsxbin/nodes/BinaryExpr.cpp
         jsxbin/nodes/BinaryExpr.h
-        jsxbin/nodes/ConditionalExpr.cpp jsxbin/nodes/ConditionalExpr.h jsxbin/nodes/ConstDeclaration.cpp jsxbin/nodes/ConstDeclaration.h jsxbin/nodes/DebuggerStatement.cpp jsxbin/nodes/DebuggerStatement.h jsxbin/nodes/DeleteExpr.cpp jsxbin/nodes/DeleteExpr.h jsxbin/nodes/DoWhileExpr.cpp jsxbin/nodes/DoWhileExpr.h jsxbin/nodes/ExprNode.cpp jsxbin/nodes/ExprNode.h jsxbin/nodes/ForInStatement.cpp jsxbin/nodes/ForInStatement.h)
+        jsxbin/nodes/ConditionalExpr.cpp
+        jsxbin/nodes/ConditionalExpr.h
+        jsxbin/nodes/ConstDeclaration.cpp
+        jsxbin/nodes/ConstDeclaration.h
+        jsxbin/nodes/DebuggerStatement.cpp
+        jsxbin/nodes/DebuggerStatement.h
+        jsxbin/nodes/DeleteExpr.cpp
+        jsxbin/nodes/DeleteExpr.h
+        jsxbin/nodes/DoWhileExpr.cpp
+        jsxbin/nodes/DoWhileExpr.h
+        jsxbin/nodes/ExprNode.cpp
+        jsxbin/nodes/ExprNode.h
+        jsxbin/nodes/ForInStatement.cpp
+        jsxbin/nodes/ForInStatement.h
+        jsxbin/nodes/ForStatement.cpp
+        jsxbin/nodes/ForStatement.h
+        jsxbin/nodes/FunctionCallExpr.cpp
+        jsxbin/nodes/FunctionCallExpr.h
+        jsxbin/nodes/FunctionDeclaration.cpp jsxbin/nodes/FunctionDeclaration.h)
