--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,4 +80,6 @@ add_executable(jsxbin_decompiler
         jsxbin/nodes/ThrowStatement.h
         jsxbin/nodes/TryStatement.cpp
         jsxbin/nodes/TryStatement.h
+        jsxbin/nodes/UnaryExpr.cpp
+        jsxbin/nodes/UnaryExpr.h
         )
