--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,4 +88,6 @@ add_executable(jsxbin_decompiler
         jsxbin/nodes/ValueNode.h
         jsxbin/nodes/WhileStatement.cpp
         jsxbin/nodes/WhileStatement.h
+        jsxbin/nodes/WithStatement.cpp
+        jsxbin/nodes/WithStatement.h
         )
