--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,4 +92,6 @@ add_executable(jsxbin_decompiler
         jsxbin/nodes/WithStatement.h
         jsxbin/nodes/XMLAccessorExpr.cpp
         jsxbin/nodes/XMLAccessorExpr.h
+        jsxbin/nodes/XMLAssignmentExpr.cpp
+        jsxbin/nodes/XMLAssignmentExpr.h
         )
