Fixed multibyte char string decoding, Update CMakeLists and added version file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,121 +1,150 @@
-cmake_minimum_required(VERSION 3.20)
-project(jsxbin_decompiler)
+cmake_minimum_required(VERSION 3.10)
+project(Jsxer)
 
 # C++ supported standards: 11-23
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories(${PROJECT_SOURCE_DIR}/include)
+file(STRINGS "VERSION" JSXER_VERSION)
 
-# for gcc add -fvisibility=hidden
+message("${PROJECT_NAME} v${JSXER_VERSION}")
 
-add_library(jsxbin_decomp STATIC
-    src/jsxbin/jsxbin.cpp
-    src/jsxbin/common.h
-    src/jsxbin/util.h
-    src/jsxbin/util.cpp
-    src/jsxbin/decoders.cpp
-    src/jsxbin/decoders.h
-    src/jsxbin/reader.cpp
-    src/jsxbin/reader.h
-    src/jsxbin/nodes/nodes.h
-    src/jsxbin/nodes/node-types.h
-    src/jsxbin/nodes/AstNode.h
-    src/jsxbin/nodes/Program.cpp
-    src/jsxbin/nodes/Program.h
-    src/jsxbin/nodes/ListExpression.cpp
-    src/jsxbin/nodes/ListExpression.h
-    src/jsxbin/nodes/ArrayExpression.cpp
-    src/jsxbin/nodes/ArrayExpression.h
-    src/jsxbin/nodes/IndexingExpression.cpp
-    src/jsxbin/nodes/IndexingExpression.h
-    src/jsxbin/nodes/LocalAssignmentExpression.cpp
-    src/jsxbin/nodes/LocalAssignmentExpression.h
-    src/jsxbin/nodes/BinaryExpression.cpp
-    src/jsxbin/nodes/BinaryExpression.h
-    src/jsxbin/nodes/TernaryExpression.cpp
-    src/jsxbin/nodes/TernaryExpression.h
-    src/jsxbin/nodes/ConstAssignment.cpp
-    src/jsxbin/nodes/ConstAssignment.h
-    src/jsxbin/nodes/DebuggerStatement.cpp
-    src/jsxbin/nodes/DebuggerStatement.h
-    src/jsxbin/nodes/UnaryRefExpression.cpp
-    src/jsxbin/nodes/UnaryRefExpression.h
-    src/jsxbin/nodes/DoWhileStatement.cpp
-    src/jsxbin/nodes/DoWhileStatement.h
-    src/jsxbin/nodes/ExpressionStatement.cpp
-    src/jsxbin/nodes/ExpressionStatement.h
-    src/jsxbin/nodes/ForInStatement.cpp
-    src/jsxbin/nodes/ForInStatement.h
-    src/jsxbin/nodes/SimpleForStatement.cpp
-    src/jsxbin/nodes/SimpleForStatement.h
-    src/jsxbin/nodes/ForStatement.cpp
-    src/jsxbin/nodes/ForStatement.h
-    src/jsxbin/nodes/CallExpression.cpp
-    src/jsxbin/nodes/CallExpression.h
-    src/jsxbin/nodes/FunctionDeclaration.cpp
-    src/jsxbin/nodes/FunctionDeclaration.h
-    src/jsxbin/nodes/FunctionExpression.cpp
-    src/jsxbin/nodes/FunctionExpression.h
-    src/jsxbin/nodes/Identifier.cpp
-    src/jsxbin/nodes/Identifier.h
-    src/jsxbin/nodes/IdRefExpr.cpp
-    src/jsxbin/nodes/IdRefExpr.h
-    src/jsxbin/nodes/IfStatement.cpp
-    src/jsxbin/nodes/IfStatement.h
-    src/jsxbin/nodes/LocalUpdateExpression.cpp
-    src/jsxbin/nodes/LocalUpdateExpression.h
-    src/jsxbin/nodes/UpdateExpression.cpp
-    src/jsxbin/nodes/UpdateExpression.h
-    src/jsxbin/nodes/BreakStatement.cpp
-    src/jsxbin/nodes/BreakStatement.h
-    src/jsxbin/nodes/LogicalExpression.cpp
-    src/jsxbin/nodes/LogicalExpression.h
-    src/jsxbin/nodes/AssignmentExpression.cpp
-    src/jsxbin/nodes/AssignmentExpression.h
-    src/jsxbin/nodes/MemberExpression.cpp
-    src/jsxbin/nodes/MemberExpression.h
-    src/jsxbin/nodes/ObjectExpression.cpp
-    src/jsxbin/nodes/ObjectExpression.h
-    src/jsxbin/nodes/RegExpLiteral.cpp
-    src/jsxbin/nodes/RegExpLiteral.h
-    src/jsxbin/nodes/ReturnStatement.cpp
-    src/jsxbin/nodes/ReturnStatement.h
-    src/jsxbin/nodes/VoidExpression.cpp
-    src/jsxbin/nodes/VoidExpression.h
-    src/jsxbin/nodes/StatementList.cpp
-    src/jsxbin/nodes/StatementList.h
-    src/jsxbin/nodes/SwitchStatement.cpp
-    src/jsxbin/nodes/SwitchStatement.h
-    src/jsxbin/nodes/ThisExpression.cpp
-    src/jsxbin/nodes/ThisExpression.h
-    src/jsxbin/nodes/ThrowStatement.cpp
-    src/jsxbin/nodes/ThrowStatement.h
-    src/jsxbin/nodes/TryStatement.cpp
-    src/jsxbin/nodes/TryStatement.h
-    src/jsxbin/nodes/UnaryExpression.cpp
-    src/jsxbin/nodes/UnaryExpression.h
-    src/jsxbin/nodes/XMLUnaryRefExpression.cpp
-    src/jsxbin/nodes/XMLUnaryRefExpression.h
-    src/jsxbin/nodes/ConstantLiteral.cpp
-    src/jsxbin/nodes/ConstantLiteral.h
-    src/jsxbin/nodes/WhileStatement.cpp
-    src/jsxbin/nodes/WhileStatement.h
-    src/jsxbin/nodes/WithStatement.cpp
-    src/jsxbin/nodes/WithStatement.h
-    src/jsxbin/nodes/XMLPredicateExpression.cpp
-    src/jsxbin/nodes/XMLPredicateExpression.h
-    src/jsxbin/nodes/XMLConstantExpression.cpp
-    src/jsxbin/nodes/XMLConstantExpression.h
-    src/jsxbin/nodes/XMLDescendantsExpression.cpp
-    src/jsxbin/nodes/XMLDescendantsExpression.h
-    src/jsxbin/nodes/XMLQualifiedNameExpression.cpp
-    src/jsxbin/nodes/XMLQualifiedNameExpression.h
+set(JSXER_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
+set(JSXER_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
+
+string(TOLOWER "${CMAKE_BUILD_TYPE}" BUILD_TYPE)
+
+message("Build: " "${CMAKE_BUILD_TYPE}")
+
+if(MSVC OR MSYS OR MINGW)
+    # for detecting Windows compilers
+    set(BUILD_PLATFORM "Windows")
+
+    set(BIN_CLI_EXT ".exe")
+    set(BIN_DLL_EXT ".dll")
+    set(BIN_LIB_EXT ".lib")
+elseif(UNIX AND NOT APPLE)
+    # for Linux, BSD, Solaris, Minix
+    set(BUILD_PLATFORM "Linux")
+
+    set(BIN_CLI_EXT "")
+    set(BIN_DLL_EXT ".so")
+    set(BIN_LIB_EXT ".a")
+elseif(APPLE)
+    # for MacOS X or iOS, watchOS, tvOS (since 3.10.3)
+    set(BUILD_PLATFORM "Darwin")
+
+    set(BIN_CLI_EXT "")
+    set(BIN_DLL_EXT ".dylib")
+    set(BIN_LIB_EXT ".a")
+else()
+    message(FATAL_ERROR "Unknown platform!, CMake will exit.")
+endif()
+
+message("Platform: " "${BUILD_PLATFORM}")
+
+if(BUILD_TYPE STREQUAL "debug")
+    set(BIN_OUT_DIR ${PROJECT_SOURCE_DIR}/bin/debug)
+else()
+    set(BIN_OUT_DIR ${PROJECT_SOURCE_DIR}/bin/release)
+endif()
+
+set(LIB_OUT_DIR ${BIN_OUT_DIR}/static)
+set(DLL_OUT_DIR ${BIN_OUT_DIR}/dll)
+
+message("Bin directory: " "${BIN_OUT_DIR}")
+message("Lib directory: " "${LIB_OUT_DIR}")
+message("Dll directory: " "${DLL_OUT_DIR}")
+
+set(BIN_CLI_NAME "jsxer")
+set(BIN_DLL_NAME "lib-jsxer")
+set(BIN_LIB_NAME "libjsxer")
+
+# Static lib
+set(JSXER_CORE_TARGET jsxer-core)
+
+file(GLOB_RECURSE JSXER_CORE_HEADERS
+    ${JSXER_SOURCE_DIR}/jsxbin/*.h
+    ${JSXER_SOURCE_DIR}/jsxbin/*.hpp
 )
 
-add_executable(jsxbin_decompiler src/cli/main.cpp)
-target_include_directories(jsxbin_decompiler PUBLIC src/jsxbin)
-target_link_libraries(jsxbin_decompiler jsxbin_decomp)
+file(GLOB_RECURSE JSXER_CORE_SOURCES
+    ${JSXER_SOURCE_DIR}/jsxbin/*.c
+    ${JSXER_SOURCE_DIR}/jsxbin/*.cpp
+)
 
-add_library(libjd SHARED src/dll/library.cpp src/dll/library.h)
-target_include_directories(libjd PUBLIC src/jsxbin)
-target_link_libraries(libjd jsxbin_decomp)
+add_library(${JSXER_CORE_TARGET} STATIC ${JSXER_CORE_HEADERS} ${JSXER_CORE_SOURCES})
+
+target_include_directories(${JSXER_CORE_TARGET} PUBLIC ${JSXER_INCLUDE_DIR})
+
+target_compile_definitions(${JSXER_CORE_TARGET} PUBLIC
+    CONFIG_VERSION="${JSXER_VERSION}"
+)
+
+set_target_properties(${JSXER_CORE_TARGET} PROPERTIES
+    PREFIX ""
+    SUFFIX "${BIN_LIB_EXT}"
+    OUTPUT_NAME "${BIN_LIB_NAME}"
+    LIBRARY_OUTPUT_DIRECTORY ${LIB_OUT_DIR}
+    ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUT_DIR}
+    RUNTIME_OUTPUT_DIRECTORY ${LIB_OUT_DIR}
+)
+
+# Dynamic link library
+set(JSXER_DLL_TARGET jsxer-dll)
+
+file(GLOB_RECURSE JSXER_DLL_HEADERS
+    ${JSXER_SOURCE_DIR}/dll/*.h
+    ${JSXER_SOURCE_DIR}/dll/*.hpp
+)
+
+file(GLOB_RECURSE JSXER_DLL_SOURCES
+    ${JSXER_SOURCE_DIR}/dll/*.c
+    ${JSXER_SOURCE_DIR}/dll/*.cpp
+)
+
+add_library(${JSXER_DLL_TARGET} SHARED ${JSXER_DLL_HEADERS} ${JSXER_DLL_SOURCES})
+
+target_link_libraries(${JSXER_DLL_TARGET} PRIVATE ${JSXER_CORE_TARGET})
+
+target_compile_definitions(${JSXER_DLL_TARGET} PUBLIC
+    CONFIG_VERSION="${JSXER_VERSION}"
+)
+
+set_target_properties(${JSXER_DLL_TARGET} PROPERTIES
+    PREFIX ""
+    SUFFIX "${BIN_DLL_EXT}"
+    OUTPUT_NAME "${BIN_DLL_NAME}"
+    RUNTIME_OUTPUT_DIRECTORY ${DLL_OUT_DIR}
+    ARCHIVE_OUTPUT_DIRECTORY ${DLL_OUT_DIR}
+    LIBRARY_OUTPUT_DIRECTORY ${DLL_OUT_DIR}
+)
+
+# CLI
+set(JSXER_CLI_TARGET jsxer-cli)
+
+file(GLOB_RECURSE JSXER_CLI_HEADERS
+    ${JSXER_SOURCE_DIR}/cli/*.h
+    ${JSXER_SOURCE_DIR}/cli/*.hpp
+)
+
+file(GLOB_RECURSE JSXER_CLI_SOURCES
+    ${JSXER_SOURCE_DIR}/cli/*.c
+    ${JSXER_SOURCE_DIR}/cli/*.cpp
+)
+
+add_executable(${JSXER_CLI_TARGET} ${JSXER_CLI_HEADERS} ${JSXER_CLI_SOURCES})
+
+target_link_libraries(${JSXER_CLI_TARGET} PRIVATE ${JSXER_CORE_TARGET})
+
+target_compile_definitions(${JSXER_CLI_TARGET} PUBLIC
+    CONFIG_VERSION="${JSXER_VERSION}"
+)
+
+set_target_properties(${JSXER_CLI_TARGET} PROPERTIES
+    PREFIX ""
+    SUFFIX "${BIN_CLI_EXT}"
+    OUTPUT_NAME "${BIN_CLI_NAME}"
+    RUNTIME_OUTPUT_DIRECTORY ${BIN_OUT_DIR}
+    ARCHIVE_OUTPUT_DIRECTORY ${BIN_OUT_DIR}
+    LIBRARY_OUTPUT_DIRECTORY ${BIN_OUT_DIR}
+)
