--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(Jsxer)
 
 # C++ supported standards: 11-23
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17) # using c++17 to use some modern features of c++
 
 file(STRINGS "VERSION" JSXER_VERSION)
 
