--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        cmake_version: '3.25.2'
+        cmake_version: [3, 25, 2]
 
     steps:
       - name: Checkout code
