making fmt to do the number formatting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,19 +177,29 @@ set(JSXER_TESTS_DATA_DIR ${JSXER_TESTS_DIR}/data)
 add_executable(jsxer-test-array-expr ${JSXER_TESTS_SRC_DIR}/array-expr.cpp)
 target_link_libraries(jsxer-test-array-expr PRIVATE ${JSXER_CORE_TARGET})
 
-add_test("ArrayExpression" jsxer-test-array-expr)
+add_test("CodeGen::ArrayExpression" jsxer-test-array-expr)
 
 add_executable(jsxer-test-obj-expr ${JSXER_TESTS_SRC_DIR}/obj-expr.cpp)
 target_link_libraries(jsxer-test-obj-expr PRIVATE ${JSXER_CORE_TARGET})
 
-add_test("ObjectExpression" jsxer-test-obj-expr)
+add_test("CodeGen::ObjectExpression" jsxer-test-obj-expr)
 
 add_executable(jsxer-test-member-expr ${JSXER_TESTS_SRC_DIR}/member-expr.cpp)
 target_link_libraries(jsxer-test-member-expr PRIVATE ${JSXER_CORE_TARGET})
 
-add_test("MemberExpression" jsxer-test-member-expr)
+add_test("CodeGen::MemberExpression" jsxer-test-member-expr)
 
 add_executable(jsxer-test-for-stmt ${JSXER_TESTS_SRC_DIR}/for-stmt.cpp)
 target_link_libraries(jsxer-test-for-stmt PRIVATE ${JSXER_CORE_TARGET})
 
-add_test("ForStatement" jsxer-test-for-stmt)
+add_test("CodeGen::ForStatement" jsxer-test-for-stmt)
+
+add_executable(jsxer-test-exp ${JSXER_TESTS_SRC_DIR}/exp.cpp)
+target_link_libraries(jsxer-test-exp PRIVATE ${JSXER_CORE_TARGET})
+
+add_test("Jsxer::Experiment" jsxer-test-exp)
+
+add_executable(n2s-formatting-test ${JSXER_TESTS_SRC_DIR}/n2s-formatting.cpp)
+target_link_libraries(n2s-formatting-test PRIVATE ${JSXER_CORE_TARGET})
+
+add_test("CodeGen::NumberFormatting" n2s-formatting-test)
