--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ elseif(UNIX AND NOT APPLE)
     set(BIN_LIB_EXT ".a")
 elseif(APPLE)
     # for MacOS X or iOS, watchOS, tvOS (since 3.10.3)
-
+    message("OSX Architecture: ${CMAKE_OSX_ARCHITECTURES}")
     set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "Build architecture for macOS" FORCE)
 
     set(BUILD_PLATFORM "Darwin")
