--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         # macos arm64, macos x86_64, and windows
-        os: [macos-latest, macos-latest-large, windows-latest]
+        os: [macos-latest, macos-14-large, windows-latest]
 
     steps:
       - name: Checkout code
