--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -10,6 +10,7 @@ jobs:
     strategy:
       matrix:
         # macos arm64, macos x86_64, and windows
+        # at the time of writing this, you need to have macos-13 in order to build for x86.
         os: [macos-latest, macos-13, windows-latest]
 
     steps:
